# credit-foundation-model

./: .gitattributes  .gitignore  01_dataset_baseline.ipynb  02_seq_preproc_tokenization.ipynb  03_foundation_model_training.ipynb  04_inference_embedding_extraction.ipynb  05_downstream_credit_eval.ipynb  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Pipfile  README.md  RUNBOOK.md  SECURITY.md  STRUCTURE.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
configs/: credit_tokenizer.yaml  experiments.yaml  pretrain_credit_decoder.yaml
data/: README.md
docs/: RUN_VALIDATION_m5.md  architecture.md  configuration.md  container_setup.md  credit_event_schema.md  decision_log.md  deployment.md  evaluation.md  extending.md  project_manager_roadmap.xlsx  technical_report.md  tokenization.md  training.md
notebooks/: 00_data_bible.ipynb  00_smoke_test_splits.ipynb  01_data_and_baseline.ipynb  01_data_splits.ipynb  02_schema_classification.ipynb  02_tokenization.ipynb  03_pretraining.ipynb  03_tokenizer_training.ipynb  04_embedding_extraction.ipynb  04_encode.ipynb  05_downstream_evaluation.ipynb  05_new_dataset.ipynb  06_fannie_data_bible.ipynb  build_data_bible.py  build_data_splits.py  build_encode.py  build_fannie_bible.py  build_new_dataset.py  build_schema_classification.py  build_tokenizer_training.py
reference_implementations/: __init__.py
reports/: _oot_smoke.md  ablation_memo.md  baseline_report.md  data_card.md  delinquency_100pct.json  delinquency_4pct.json  delinquency_4pct_vs_100pct.json  downstream_eval.md  fannie_dataset_profile.json  fannie_oot_2022_2023.md  fannie_oot_crisis.md  fannie_oot_crisis_ft_full.md  fannie_oot_recent.md  fannie_tokenizer_report.md  fm_downstream_dec2016.md  ft_frozen.md  ft_full.md  ft_lora.md  ft_prepay_oot.md  g2_equivalence_check.md  m4_downstream_dec2016.md  m4_ft_frozen.md  m4_ft_lora.md  m4b_ft_frozen.md  m4b_ft_full.md  m4b_ft_lora.md  m5_65m_oot_ft_full.md  m5_on_10pct_ablation.md  m5_oot_ft_frozen.md  m5_oot_ft_full.md  m5_oot_ft_lora.md  m_100m_oot_ft_full.md  m_100m_rr_oot_ft_full.md  model_card.md  mortgage_dataset_profile.json  mortgage_oot_2022_2023.md  mortgage_oot_crisis.md  mortgage_oot_recent.md  payment_behaviours_tokenizer_report.md  pb_late30_baseline.md  (+3 more)
scripts/: ablation_profile_state.py  baseline_payment_behaviours.py  build_corpus.py  build_oot_baseline.py  calibrate.py  classify_schema.py  compare_profiles.py  encode_dataset.py  evaluate_downstream.py  extract_credit_embeddings.py  extract_embeddings.py  finetune.py  gpu_smoke_test.py  ingest.py  ingest_fannie_mae.py  ingest_mortgage_performance.py  prepare_data.py  pretrain.py  profile_fannie_dataset.py  profile_mortgage_dataset.py  publish_model.py  run_65m_experiment.sh  run_crisis_oot.sh  run_scale_100m.sh  score_credit_portfolio.py  score_portfolio.py  setup_container.sh  stratify_pb_length.py  train.py  train_baseline.py  train_decoder_model.py  train_tokenizer.py  validate_dataset.py  (+3 more)
(+244 files in other folders)
